Improved the markup for show and models for index

--- a/resources/views/concepts/show.twig
+++ b/resources/views/concepts/show.twig
@@ -1,9 +1,5 @@
 {% extends "layouts.snac_layout" %}
 
-{% block custom_js %}
-{# this block is included in the page header. For example: 
-<script src="{{control.snacURL}}/javascript/html2canvas.js{{control.noCache}}"></script>#}
-{% endblock %}
 {% block content %}
   {% if session('status') %}
     <div class="alert alert-success">
@@ -32,8 +28,8 @@
             </tr>
         </thead>
         <tbody>
-        {% for concept in concepts %}
-          <tr><td><a href="{{ url('concepts',concept.id) }}">{{ concept.terms.first.text }}</a></td></tr>
+        {% for term in concept.terms %}
+          <tr><td>{{ term.text }}</a></td></tr>
         {% endfor %}
         </tbody>
     </table>
