Adds support for React JavaScript Framework

--- a/resources/views/layouts/snac_layout.twig
+++ b/resources/views/layouts/snac_layout.twig
@@ -66,6 +66,7 @@
 </div>
 {{ navigation_macros.footer(X, user, permissions, control) }}
 {{ dump() }}
+<script src="{{ mix('/js/app.js') }}"></script>
 </body>
 </html>
 </html>
