Adds DataTables using Bootstrap-vue
Set up the Boostrap-vue module including its css files. The
ConceptController was changed to use LengthAwarePaginator. This change
affects the format of the return value, now the JavaScript is in charge
of processing the data to extract the required info.

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,6 +6,8 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+// Bootstrap-vue
+@import '~bootstrap-vue/src/index.scss';
 
 // SNAC
 @import './snac.css';
