Adds authentication validation on navigation menu
Added validations to check if the user is authenticated to display only
the elements available to logged in users.

Also fixed CSS for footer and general layout.

--- a/resources/sass/snac.css
+++ b/resources/sass/snac.css
@@ -333,7 +333,9 @@ h1 {
 }
 
 div.snac {
-    min-height: 815px;
+  /* header height is 77px  */
+  /* footer height is 190px */
+    min-height: calc(100vh - 77px - 190px);
 }
 
 .snac .navbar .container {
